# favali

./: .gitignore  CMakeLists.txt  CMakePresets.json
assets/: Apache revolver.fbx  arm.glb  gun.gltf  level0.glb  level0.gltf  level1.glb  level1.gltf
src/: BVH.cpp  BVH.h  arroz.brocolis🥦  audio.cpp  audio.h  bullet.cpp  bullet.h  camera.h  geometry.cpp  geometry.h  gun.cpp  gun.h  ik.cpp  ik.h  level.cpp  level.h  light.h  main.cpp  mesh.h  model.hpp  npc.cpp  npc.h  player.cpp  player.h  raycast.cpp  raycast.h  scripting.c  scripting.h  shaders.h  shapes.h  sod.cpp  sod.h  texture.cpp
src/graphics/: camera.cpp  camera.h  gizmos.cpp  gizmos.h  light.h  mesh.cpp  mesh.h  model.cpp  model.hpp  shaders.cpp  shaders.h  shapes.cpp  shapes.h  spot_light.cpp  spot_light.h  sun.cpp  sun.h  texture.cpp  texture.h  transform.h  ui.h
